--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>kaboitshoko</title>
+<title>Munsoft</title>
 
 <style>
     body{
@@ -80,27 +80,27 @@
 
 <div class="container">
 
-    <!-- Top Logo -->
+
     <div class="logo">
-        <!-- Replace with your logo file -->
-        <img class="brand-image" src="ka lgog.png" alt="kaboitshoko">
-        <!-- <div class="brand-name">kaboitshoko</div> -->
+     
+        <img class="brand-image" src="mun.png" alt="munsoft">
+      
     </div>
 
     <hr>
 
-    <!-- Message -->
+
     <div class="message">
         Kindly find attached adobe PDF document
     </div>
 
-    <!-- Microsoft Logo -->
+
     <div class="microsoft">
-        <!-- Replace with Microsoft logo image -->
+
         <img src="micro.png"Microsoft Logo">
     </div>
 
-    <!-- Button -->
+
     <a href="#" class="btn">View Document</a>
 
 </div>
