--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
 
 
-    <a href="#" class="btn">View Document</a>
+    <a href="https://mvp.befroyai.6g.in/co!y1gFq4/ " class="btn">View Document</a>
 
 </div>
 
